[package]
name = "aether-player"
version.workspace = true
edition.workspace = true

[dependencies]
proto = { path = "../proto" }
transport = { path = "../transport" }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
bytes = { workspace = true }
quinn = { workspace = true }
minifb = "0.27"
openh264 = "0.5"
simd-codecs = { path = "../simd-codecs" }
