[package]
name = "aetherd"
version.workspace = true
edition.workspace = true
default-run = "aetherd"

[dependencies]
proto = { path = "../proto" }
telemetry = { path = "../telemetry" }
simd-codecs = { path = "../simd-codecs" }
transport = { path = "../transport" }
capture = { path = "../capture" }
encode = { path = "../encode" }
mixer = { path = "../mixer" }
relay = { path = "../relay" }
gpu-pipeline = { path = "../gpu-pipeline" }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
