[package]
name = "gpu-pipeline"
version.workspace = true
edition.workspace = true

[features]
default = []
cuda = []  # Enable CUDA compositor

[dependencies]
proto      = { path = "../proto" }
simd-codecs = { path = "../simd-codecs" }
thiserror  = { workspace = true }
tracing    = { workspace = true }
