[package]
name = "simd-codecs"
version.workspace = true
edition.workspace = true

[dependencies]
wide      = { workspace = true }
tracing   = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name    = "yuv_to_rgb"
harness = false

[[bench]]
name    = "bilinear_scale"
harness = false
