[package]
name = "transport"
version.workspace = true
edition.workspace = true

[dependencies]
proto      = { path = "../proto" }
telemetry  = { path = "../telemetry" }
tokio      = { workspace = true }
bytes      = { workspace = true }
quinn      = { workspace = true }
rustls     = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tracing    = { workspace = true }
thiserror  = { workspace = true }
anyhow     = { workspace = true }
rand       = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
